# MasterPhyl

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  analysis.c  analysis.c~  analysis.h  dynamic_homology.c  dynamic_homology.h  input2  input~  main.c  main.py  makefile  matrix.c  matrix.c.orig  matrix.c~  matrix.h  matrix.h.gch  matrix.h.orig  matrix.h~  nw.c  output.c  output.tre  output.txt  read.c  rf.c  rf.h  tests.c  tree.c  tree.h
app/: mock_main.cpp
lib/: CMakeLists.txt
lib/analysis/: analysis.cpp
lib/io/: output.h
lib/tree/: CMakeLists.txt  rf.cpp  rf.h  tree.cpp  tree.h
src/: analysis.h  dynamic_homology.cpp  main.cpp  matrix.h  nw.cpp  nw.h  output.cpp  rf.cpp  rf.h  tree-orig.cpp  tree-orig.h  tree.cpp  tree.h
tests/unit_tests/: CMakeLists.txt  test_tree.cpp  test_tree_rf.cpp
